2004-07-10  Chris Kelly <ckdake@users.sf.net> 1.4.4-RC1

	* v1.4.4 Release Candidate 1

2004-07-09  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-cvs-b248

	* Fix: phpBB2 support for applets
	* Fix: gallery_remote2.php now returns correct extra_fields in album_properties
	* Fix: gallery_remote2.php no longer throws a warning when listing empty albums

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b247

	* Change: ...and slideshow and search.

	* Change: Fix the validation links in each

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b246

	* Change: Make gallery.footer, album.footer and photo.footer all
	  the same.  The slight differences between them caused text variation
	  in different skins.  (Besides, there's no reason they shouldn't be.)

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b245

	* Change: Backwards params on eregi()

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b244

	* Change: Verify !empty() for the exec() status on the check page.

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b243

	* Change: Typo in AlbumItem

	* Change: Add link to find_orphans beside config wizard for admins

2004-07-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b242

	* Change: Give Random Block a configuration variable for cache timeout

2004-07-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b241

	* Change: Problem with upgrading - photos weren't being loaded prior
	  to running integrityCheck.

	* Change: During integrityCheck, set $gallery->album to the current album
	  because AlbumItem::integrityCheck relies on it to get the current album

	* Change: Fix a couple PHP notices for unset variables

2004-07-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b240

	* Change: Add a check for exec() being disabled in the check section
	  of the config wizard.

2004-07-07  Bharat Mediratta  <bharat@menalto.com> 1.4.4-cvs-b239
